--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <a class="mr-8 font-thin" href="https://numerique.canada.ca/" lang="fr">Français</a>
             </div>
             <nav>
-                <div class="flex justify-between items-end my-6">
+                <div class="md:flex justify-between items-end my-6">
                     <svg class="w-64" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1368 265.5"
                         style="enable-background:new 0 0 1368 265.5;" xml:space="preserve">
@@ -345,7 +345,7 @@
                             </g>
                         </g>
                     </svg>
-                    <div class="flex text-xl font-thin tracking-wide">
+                    <div class="hidden md:flex flex-wrap md:text-xl font-thin tracking-wide">
                         <a class="mx-6" href="https://digital.canada.ca/partnerships/">Partnerships</a>
                         <a class="mx-6" href="https://digital.canada.ca/tools-and-resources/">Tools and resources</a>
                         <a class="mx-6" href="https://digital.canada.ca/meet-the-team/">Who we are</a>
@@ -354,7 +354,7 @@
                     </div>
                 </div>
                 <div class="">
-                    <h1 class="py-16 text-3xl font-thin leading-snug tracking-wide">
+                    <h1 class="px-4 py-8 md:py-16 text-2xl md:text-3xl font-thin leading-snug tracking-wide">
                         The Canadian Digital Service teams up with federal departments and agencies to put people’s
                         needs at the centre of government services.
                     </h1>
@@ -423,18 +423,18 @@
         </div>
     </section>
 
-    <section id="section-3" class="mx-auto py-12 bg-gray-700">
-        <div class="flex justify-between max-w-5xl mx-auto">
+    <section id="section-3" class="mx-auto py-12 bg-gray-900">
+        <div class="md:flex justify-between max-w-5xl mx-auto px-4">
             <h3 class="text-4xl text-yellow-500">We've got a great team ...</h3>
             <button
-                class="text-lg text-yellow-500 border-2 px-12 border-yellow-500 font-medium hover:bg-yellow-500 hover:text-gray-800"
+                class="text-lg text-yellow-500 border-2 my-3 px-12 py-2 border-yellow-500 font-medium hover:bg-yellow-500 hover:text-gray-800"
                 href="">Learn more</button>
         </div>
-        <img class="my-10 w-1/3 mx-auto" src="/public/build/img/undraw_team_page_pgpr.svg" alt="">
-        <div class="flex justify-between max-w-5xl mx-auto">
+        <img class="my-10 w-1/3 mx-auto" src="build/img/undraw_team_page_pgpr.svg" alt="">
+        <div class="md:flex justify-between max-w-5xl mx-auto px-4">
             <h3 class="text-4xl text-yellow-500">... but we need you help</h3>
             <button
-                class="text-lg text-yellow-500 border-2 px-12 border-yellow-500 font-medium hover:bg-yellow-500 hover:text-gray-800"
+                class="text-lg text-yellow-500 border-2 my-3 px-12 py-2 border-yellow-500 font-medium hover:bg-yellow-500 hover:text-gray-800"
                 href="">Apply now</button>
         </div>
     </section>
@@ -447,7 +447,7 @@
         </div>
         <div class="block md:flex md:justify-around">
             <div class="md:w-1/3 mx-3 p-6 my-4 bg-white overflow-hidden shadow hover:shadow-2xl">
-                <img class="h-32 mx-auto" src="/public/build/img/undraw_dev_productivity_umsq.svg" alt="">
+                <img class="h-32 mx-auto" src="build/img/undraw_dev_productivity_umsq.svg" alt="">
                 <h3 class="mt-3 text-sm leading-tight font-medium">The best panic attack I ever had</h3>
                 <p class="text-xs tracking-wider my-3 leading-loose">
                     Nov 21, 2019
@@ -456,7 +456,7 @@
             </div>
 
             <div class="md:w-1/3 mx-3 p-6 my-4 bg-white booverflow-hidden shadow hover:shadow-2xl">
-                <img class="h-32 mx-auto" src="/public/build/img/undraw_dev_focus_b9xo.svg" alt="">
+                <img class="h-32 mx-auto" src="build/img/undraw_dev_focus_b9xo.svg" alt="">
                 <h3 class="mt-3 text-sm leading-tight font-medium">Distance makes the team stronger</h3>
                 <p class="text-xs tracking-wider my-3 leading-loose">
                     Oct 23, 2019
@@ -465,7 +465,7 @@
             </div>
 
             <div class="md:w-1/3 mx-3 p-6 my-4 bg-white boverflow-hidden shadow hover:shadow-2xl">
-                <img class="h-32 mx-auto" src="/public/build/img/undraw_source_code_xx2e.svg" alt="">
+                <img class="h-32 mx-auto" src="build/img/undraw_source_code_xx2e.svg" alt="">
                 <h3 class="mt-3 text-sm leading-tight font-medium">Assessing government training needs</h3>
                 <p class="text-xs tracking-wider my-3 leading-loose">
                     Aug 30, 2019
@@ -475,21 +475,21 @@
         </div>
     </section>
     <section id="section-5" class="mx-auto py-12 bg-yellow-500">
-            <div class="flex justify-between max-w-5xl mx-auto">
-                <h3 class="text-4xl text-black font-light">Subscribe to our newsletter!</h3>
-                <div class="my-5">
-                        <label class="block mb-1 font-medium" for="email">Email</label>
-        
-                        <input id="email"
-                            class="bg-white shadow appearance-none border rounded w-full py-2 px-3 focus:outline-none focus:border-nhsyellow"
-                            type="email" value="" placeholder="Your email address" required>
-                        </input>
-                        <button
-                class="text-lg border-2 px-12 bg-gray-500 font-medium hover:text-gray-800"
-                href="">Learn more</button>
-                    </div>
+        <div class="md:flex justify-between max-w-5xl mx-auto px-5">
+            <h3 class="text-4xl text-black font-light">Subscribe to our newsletter!</h3>
+            <div class="my-5">
+                <label class="block mb-1 font-medium" for="email">Email address</label>
+
+                <input id="email"
+                    class="bg-white appearance-none border-2 border-black w-full py-2 px-3 focus:outline-none focus:border-yellow-700"
+                    type="email" value="" placeholder="Your email address" required>
+                </input>
+                <button class="text-lg text-white mt-4 py-2 px-12 bg-gray-900 font-medium hover:bg-black" href="">
+                    Subscribe
+                </button>
             </div>
-        </section>
+        </div>
+    </section>
 
     <script src="" async defer></script>
 </body>
