--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <header class="bg-black bg-repeat text-white">
+    <header class="bg-black text-white">
         <div class="max-w-5xl mx-auto">
             <div class="flex justify-between py-3 border-b-2 border-yellow-500">
-                <svg class="fill-current w-56" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 819 75.97">
+                <svg class="w-56" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 819 75.97">
                     <title>goc--header-logo</title>
                     <rect width="36.84" height="75.01" style="fill:#fff" />
                     <rect x="118.54" width="36.84" height="75.01" style="fill:#fff" />
